--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -97,7 +97,7 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: '8.3'
-          extensions: mbstring, dom, fileinfo, mysql, pdo_mysql
+          extensions: mbstring, dom, fileinfo, pdo_mysql
           tools: composer:v2
           coverage: xdebug
 
