--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "vite build",
     "preview": "vite preview",
     "type-check": "vue-tsc --noEmit",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "dependencies": {
     "@headlessui/vue": "^1.7.22",
@@ -17,11 +18,12 @@
     "@vueuse/core": "^11.0.3",
     "axios": "^1.7.7",
     "pinia": "^2.3.1",
-    "pinia-plugin-persistedstate": "^4.1.3",
+    "pinia-plugin-persistedstate": "^3.2.3",
     "vue": "^3.5.10",
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
+    "@eslint/js": "^9.9.1",
     "@tailwindcss/forms": "^0.5.9",
     "@tailwindcss/postcss": "^4.1.14",
     "@tailwindcss/typography": "^0.5.15",
@@ -30,9 +32,12 @@
     "@vitejs/plugin-vue": "^5.1.4",
     "@vue/tsconfig": "^0.5.1",
     "autoprefixer": "^10.4.20",
+    "eslint": "^9.9.1",
+    "eslint-plugin-vue": "^9.27.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^4.0.0-alpha.25",
     "typescript": "^5.6.2",
+    "typescript-eslint": "^8.3.0",
     "vite": "^5.4.8",
     "vue-tsc": "^2.1.6"
   }
