--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -75,20 +75,18 @@ jobs:
 
       - name: Set Testing Environment
         run: |
-          # Ensure the .env has the correct DB config for migrations
-          php -r "file_put_contents('.env', str_replace([PHP_EOL.'DB_CONNECTION='.getenv('DB_CONNECTION'), PHP_EOL.'DB_HOST='.getenv('DB_HOST'), PHP_EOL.'DB_PORT='.getenv('DB_PORT'), PHP_EOL.'DB_DATABASE='.getenv('DB_DATABASE'), PHP_EOL.'DB_USERNAME='.getenv('DB_USERNAME'), PHP_EOL.'DB_PASSWORD='.getenv('DB_PASSWORD')], '', file_get_contents('.env')));
-          echo "DB_CONNECTION=${DB_CONNECTION}" >> .env
-          echo "DB_HOST=${DB_HOST}" >> .env
-          echo "DB_PORT=${DB_PORT}" >> .env
-          echo "DB_DATABASE=${DB_DATABASE}" >> .env
-          echo "DB_USERNAME=${DB_USERNAME}" >> .env
-          echo "DB_PASSWORD=${DB_PASSWORD}" >> .env
+          echo "DB_CONNECTION=mysql" >> .env
+          echo "DB_HOST=127.0.0.1" >> .env
+          echo "DB_PORT=3306" >> .env
+          echo "DB_DATABASE=testing" >> .env
+          echo "DB_USERNAME=root" >> .env
+          echo "DB_PASSWORD=password" >> .env
 
       - name: Wait for MySQL
         run: |
           echo 'Waiting for MySQL to be ready...'
           for i in {1..30}; do
-            if mysqladmin ping -h "$DB_HOST" -P "$DB_PORT" --silent; then
+            if mysqladmin ping -h "127.0.0.1" -P "3306" --silent; then
               echo 'MySQL is ready.'
               exit 0
             fi
