feat: Enhanced company and CV forms with Iraq-specific features
Major Features:
- Company form: Added category dropdown (30 options), Iraq cities dropdown, logo upload with preview, company gallery (max 10 images), required skills with +Add button
- Company profile: Added carousel for gallery images with navigation, dots, and counter
- CV form: Set Iraq as default country, improved profile image preview (rounded-lg instead of circle)
- Job search: Added Iraq city autocomplete with keyboard navigation in hero and jobs page

Backend Changes:
- Added required_skills JSON column to companies table
- Dropped blogs table and related functionality
- Created config/company.php for categories and Iraq cities
- Updated company validation rules for new fields
- Enhanced company image upload to handle multiple images

Frontend Changes:
- Created companyCategories.ts and iraqCities.ts config files
- Enhanced CompanyForm with logo preview, gallery upload, and skills management
- Added carousel component to ViewMyCompanyView for photo gallery
- Updated company cards to display logos
- Improved city input fields with autocomplete dropdowns
- Removed blog-related routes and components

Database:
- Migration: 2025_10_25_183323_drop_blogs_table
- Migration: 2025_10_25_190849_add_required_skills_to_companies_table

Tests: All automated tests passing (PHPUnit, TypeScript, ESLint)

--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@heroicons/vue": "^2.1.5",
     "@vueuse/core": "^11.0.3",
     "axios": "^1.7.7",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.3",
     "pinia": "^2.3.1",
     "pinia-plugin-persistedstate": "^3.2.3",
     "vue": "^3.5.10",
