--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "test": "npm run type-check && npm run lint",
-    "test:quick": "vue-tsc --noEmit --skipLibCheck"
+    "test:quick": "vue-tsc --noEmit --skipLibCheck",
+    "analyze": "vite build --mode analyze",
+    "optimize": "npm run lint:fix && npm run build"
   },
   "dependencies": {
     "@headlessui/vue": "^1.7.22",
@@ -38,6 +40,7 @@
     "eslint-plugin-vue": "^9.27.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^4.0.0-alpha.25",
+    "terser": "^5.44.0",
     "typescript": "^5.6.2",
     "typescript-eslint": "^8.3.0",
     "vite": "^5.4.8",
