--- a/.env.example
+++ b/.env.example
@@ -65,5 +65,8 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 # Feature Flags
 FEATURE_FREE_CVS=false
 
+# Content Security Policy
+CSP_ENABLED=true
+
 VITE_APP_NAME="${APP_NAME}"
 VITE_FEATURE_FREE_CVS="${FEATURE_FREE_CVS}"
