--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -51,7 +51,7 @@ jobs:
 
   # Frontend quality checks
   frontend-quality:
-    name: Frontend Quality
+    name: Web Frontend Quality
     runs-on: ubuntu-latest
     
     steps:
@@ -73,11 +73,39 @@ jobs:
       - name: Type check
         run: npm run type-check
 
+  # Flutter quality checks
+  flutter-quality:
+    name: Flutter Mobile Quality
+    runs-on: ubuntu-latest
+    
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          flutter-version: '3.24.0'
+          channel: 'stable'
+          cache: true
+
+      - name: Get Flutter dependencies
+        working-directory: frontend
+        run: flutter pub get
+
+      - name: Run Flutter Analyze
+        working-directory: frontend
+        run: flutter analyze
+
+      - name: Check Flutter formatting
+        working-directory: frontend
+        run: dart format --set-exit-if-changed .
+
   # Run tests
   test:
     name: Run Tests
     runs-on: ubuntu-latest
-    needs: [security, code-quality, frontend-quality]
+    needs: [security, code-quality, frontend-quality, flutter-quality]
     
     services:
       mysql:
@@ -201,9 +229,10 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     if: github.event_name == 'push' && github.ref == 'refs/heads/develop'
-    environment:
-      name: staging
-      url: https://staging.jobsiq.com  # Update with your staging URL
+    # Uncomment and configure environment when ready to deploy
+    # environment:
+    #   name: staging
+    #   url: https://staging.jobsiq.com
     
     steps:
       - name: Download artifact
@@ -230,9 +259,10 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-    environment:
-      name: production
-      url: https://jobsiq.com  # Update with your production URL
+    # Uncomment and configure environment when ready to deploy
+    # environment:
+    #   name: production
+    #   url: https://jobsiq.com
     
     steps:
       - name: Download artifact
