--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -42,7 +42,7 @@ dependencies:
   go_router: ^17.0.0
 
   # Utils
-  intl: ^0.20.0
+  intl: any
   logger: ^2.3.0
   dartz: ^0.10.1
   connectivity_plus: ^7.0.0
@@ -51,10 +51,6 @@ dependencies:
   url_launcher: ^6.2.6
   share_plus: ^12.0.1
   permission_handler: ^12.0.1
-
-  # Forms & Validation
-  flutter_form_builder: ^10.2.0
-  form_builder_validators: ^11.1.2
 
   # UI Enhancements
   flutter_slidable: ^4.0.3
