--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   hive_flutter: ^1.1.0
 
   # Navigation
-  go_router: ^17.0.0
+  go_router: ^14.6.2
 
   # Utils
   intl: any
@@ -65,6 +65,10 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^4.0.0
+
+  # Testing
+  mockito: ^5.4.4
+  bloc_test: ^10.0.0
 
   # Code Generation
   build_runner: ^2.4.13
