--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -47,16 +47,21 @@ dependencies:
   dartz: ^0.10.1
   connectivity_plus: ^7.0.0
   image_picker: ^1.1.2
+  image_cropper: ^8.0.2
   file_picker: ^10.3.6
   url_launcher: ^6.2.6
   share_plus: ^12.0.1
   permission_handler: ^12.0.1
+  pdf: ^3.11.1
+  printing: ^5.13.4
+  path_provider: ^2.1.5
 
   # UI Enhancements
   flutter_slidable: ^4.0.3
   pull_to_refresh: ^2.0.0
   flutter_staggered_grid_view: ^0.7.0
   smooth_page_indicator: ^1.1.0
+  timeline_tile: ^2.0.0
 
   # Date & Time
   timeago: ^3.6.1
