--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "axios": "^1.7.7",
     "pinia": "^2.3.1",
     "pinia-plugin-persistedstate": "^3.2.3",
+    "rtlcss": "^4.3.0",
     "vue": "^3.5.10",
+    "vue-i18n": "^9.14.5",
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
