--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "test": "npm run type-check && npm run lint",
     "test:quick": "vue-tsc --noEmit --skipLibCheck",
     "analyze": "vite build --mode analyze",
-    "optimize": "npm run lint:fix && npm run build"
+    "optimize": "npm run lint:fix && npm run build",
+    "sitemap": "node generate-sitemap.js"
   },
   "dependencies": {
     "@headlessui/vue": "^1.7.22",
