--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,9 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
+# APP_URL is used by the backend (Laravel) for server-side URL generation
 APP_URL=http://localhost
+# VITE_APP_URL is used by the frontend (Vite) and accessible via import.meta.env.VITE_APP_URL
 VITE_APP_URL=https://jobs.iq
 
 APP_LOCALE=en
