--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "rtlcss": "^4.3.0",
     "vue": "^3.5.10",
     "vue-i18n": "^9.14.5",
-    "vue-router": "^4.4.5"
+    "vue-router": "^4.4.5",
+    "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
